--- a/src/Components/pages/MoviesPage.module.css
+++ b/src/Components/pages/MoviesPage.module.css
@@ -1,8 +1,9 @@
 .moviesPage {
   width: 100%;
-  height: 1024px;
-
+  height: 100%;
   background: radial-gradient(circle, rgba(11, 8, 9, 0) 0%, rgba(2, 5, 9, 1) 100%), url("../../picture/image6.jpg");
+  background-repeat: no-repeat;
+  background-color: #707070;
 }
 
 .moviesPage h1 {
@@ -36,12 +37,15 @@
   border-radius: 30px 0px 0px 30px;
   border: none;
   padding: 0;
+  font-size: 18px;
+  margin-bottom: 100px;
+  text-indent: 20px;
 }
+
 input::-webkit-input-placeholder {
   font-weight: normal;
   font-size: 18px;
   color: #cccccc;
-  padding-left: 28px;
 }
 
 .searchForm button {
@@ -54,4 +58,93 @@ input::-webkit-input-placeholder {
   font-weight: bold;
   font-size: 18px;
   padding: 0;
+}
+
+.foundMoviesContainer {
+  margin: 0 auto;
+  width: 555px;
+  height: 222px;
+  background: #111111;
+  opacity: 0.8;
+  border-radius: 10px;
+  margin-bottom: 25px;
+  margin-top: 30px;
+  position: relative;
+}
+.foundMovieTitle {
+  margin: 0;
+  padding-top: 15px;
+  padding-left: 130px;
+}
+
+.foundMoviesLink {
+  color: white;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  text-decoration: none;
+}
+
+.individualPoster {
+  width: 95px;
+  height: 141px;
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  border-radius: 10px;
+}
+
+.scoreContainer {
+  height: 30px;
+  width: 40px;
+  background-color: #fac539;
+  border-radius: 8px;
+  position: absolute;
+  top: 15px;
+  left: 500px;
+}
+.score {
+  font-style: normal;
+  font-weight: 900;
+  font-size: 17px;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  padding-top: 5px;
+}
+
+.dateContainer {
+  display: flex;
+  padding-left: 130px;
+}
+
+.dateContainer::after {
+  content: "";
+  width: 346px;
+  border-bottom: solid 1px rgba(255, 255, 255, 0.22);
+  position: absolute;
+  left: 130px;
+  top: 43%;
+}
+
+.popularity {
+  color: white;
+  padding-right: 20px;
+}
+
+.releaseDate {
+  color: white;
+}
+
+.overviewContainer {
+  width: 400px;
+  height: 100px;
+  padding-left: 130px;
+  overflow: scroll;
+  margin-top: 15px;
+}
+
+.overviewText {
+  color: white;
+  margin: 0;
 }
