--- a/src/Components/pages/MoviesPage.module.css
+++ b/src/Components/pages/MoviesPage.module.css
@@ -31,6 +31,16 @@
   margin-left: 443px;
   display: flex;
 }
+
+.searchForm::after {
+  content: "";
+  width: 1440px;
+  border-bottom: solid 0px transparent;
+  box-shadow: 0px 50px 50px 50px #050505;
+  position: absolute;
+  left: 0px;
+  bottom: -134px;
+}
 .input {
   width: 434px;
   height: 50px;
@@ -40,6 +50,7 @@
   font-size: 18px;
   margin-bottom: 100px;
   text-indent: 20px;
+  outline: none;
 }
 
 input::-webkit-input-placeholder {
