--- a/src/Components/pages/MovieDetailsPage.module.css
+++ b/src/Components/pages/MovieDetailsPage.module.css
@@ -1,34 +1,45 @@
-.goBackButton {
+.goBackButton,
+.castLink,
+.reviewsLink {
   width: 100px;
   height: 45px;
   border-radius: 15px;
-  border: none;
-  background: #4ea7f9;
   color: white;
   font-weight: bold;
   font-size: 18px;
-  padding: 0;
-  margin: 15px;
   cursor: pointer;
 }
+
+.goBackButton {
+  background: #4ea7f9;
+  margin: 15px;
+  padding: 0;
+  border: none;
+}
+
 .movieDetailsContainer {
   position: absolut;
+  height: 500px;
 }
 
 .movieInfo {
   position: relative;
   bottom: 450px;
   left: 400px;
-  width: 800px;
-  height: 100%;
 }
 .movieInfo h3 {
   font-weight: 900;
   font-size: 50px;
+  width: 60%;
 }
 .moviePoster {
   margin-left: 15px;
   border-radius: 10px;
+}
+
+.movieOverview {
+  width: 60%;
+  margin-top: 0;
 }
 
 .movieTitle {
@@ -50,7 +61,43 @@
   bottom: 22px;
   left: 89px;
   opacity: 0.5;
+  margin-left: 7px;
 }
 .scoreContainer {
   margin-top: 30px;
+  font-weight: bold;
+  margin-bottom: 0;
+}
+
+.additionalInfo {
+  margin-left: 15px;
+  font-weight: bold;
+}
+
+.castLink,
+.reviewsLink {
+  text-decoration: none;
+  background: #111111;
+  opacity: 0.8;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 15px;
+}
+
+.additionalInfoLinks {
+  display: flex;
+  padding: 15px;
+}
+
+.reviewsLink:hover {
+  background: #4ea7f9;
+}
+
+.castLink:hover {
+  background: #4ea7f9;
+}
+
+.genresList {
+  padding: 0;
 }
