--- a/src/Components/pages/MoviesPage.module.css
+++ b/src/Components/pages/MoviesPage.module.css
@@ -1,9 +1,9 @@
 .moviesPage {
-  width: 100%;
   height: 100%;
   background: radial-gradient(circle, rgba(11, 8, 9, 0) 0%, rgba(2, 5, 9, 1) 100%), url("../../picture/image6.jpg");
   background-repeat: no-repeat;
   background-color: #707070;
+  padding-bottom: 40px;
 }
 
 .moviesPage h1 {
@@ -28,8 +28,8 @@
   margin-bottom: 120px;
 }
 .searchForm {
-  margin-left: 443px;
   display: flex;
+  justify-content: center;
 }
 
 .searchForm::after {
