--- a/src/Components/pages/MoviesPage.module.css
+++ b/src/Components/pages/MoviesPage.module.css
@@ -1,8 +1,10 @@
 .moviesPage {
-  height: 100%;
-  background: radial-gradient(circle, rgba(11, 8, 9, 0) 0%, rgba(2, 5, 9, 1) 100%), url("../../picture/image6.jpg");
+  background: radial-gradient(circle, rgba(11, 8, 9, 0) 0%, rgba(2, 5, 9, 1) 100%), url("../../picture/image6.jpg"), 600px;
+  box-sizing: border-box;
+  height: initial;
+  background-position: center;
   background-repeat: no-repeat;
-  background-color: #707070;
+  background-size: cover;
   padding-bottom: 40px;
 }
 
@@ -32,15 +34,6 @@
   justify-content: center;
 }
 
-.searchForm::after {
-  content: "";
-  width: 1440px;
-  border-bottom: solid 0px transparent;
-  box-shadow: 0px 50px 50px 50px #050505;
-  position: absolute;
-  left: 0px;
-  bottom: -134px;
-}
 .input {
   width: 434px;
   height: 50px;
@@ -151,7 +144,7 @@ input::-webkit-input-placeholder {
   width: 400px;
   height: 100px;
   padding-left: 130px;
-  overflow: scroll;
+  overflow-y: auto;
   margin-top: 15px;
 }
 
