--- a/src/Components/pages/MoviesPage.module.css
+++ b/src/Components/pages/MoviesPage.module.css
@@ -1,11 +1,9 @@
 .moviesPage {
-  background: radial-gradient(circle, rgba(11, 8, 9, 0) 0%, rgba(2, 5, 9, 1) 100%), url("../../picture/image6.jpg"), 600px;
-  box-sizing: border-box;
-  height: initial;
+  background: radial-gradient(circle, rgba(11, 8, 9, 0) 0%, rgba(2, 5, 9, 1) 100%), url("../../picture/image6.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  padding-bottom: 40px;
+  padding-bottom: 359px;
 }
 
 .moviesPage h1 {
